hphp/hack/test/ifc/check/external_args.php.exp
=== IFC analysis results for external_args.php
File "external_args.php", line 50, characters 3-24:
Context-implicit policy leaks into `A_lump` via `pc`. (Typing[4380])
File "external_args.php", line 50, characters 3-24:
Context-implicit policy leaks into `A_lump` via `A_lump'1`. (Typing[4380])
File "external_args.php", line 50, characters 3-24:
Context-implicit policy leaks into `A_lump` via `A'1`. (Typing[4380])
File "external_args.php", line 30, characters 3-12:
Context-implicit policy leaks into `A_lump'1` via `A_lump`. (Typing[4380])
File "external_args.php", line 36, characters 3-13:
Context-implicit policy leaks into `A_lump` via `B_lump`. (Typing[4380])
File "external_args.php", line 24, characters 3-24:
Context-implicit policy leaks into `A_lump` via `pc`. (Typing[4380])
File "external_args.php", line 24, characters 3-24:
Context-implicit policy leaks into `A_lump` via `A_lump'1`. (Typing[4380])
File "external_args.php", line 24, characters 3-24:
Context-implicit policy leaks into `A_lump` via `A'1`. (Typing[4380])
